k8s/namespaces/frontend/base/admin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway
  rules:
  - backendRefs:
    - name: svc
      port: 80
  # hostname (admin.{base-domain}) is patched per overlay.
